# fruit_detection

./: main.py  pyproject.toml
script/: add_dataset.py
